# carrotscript.github.io

./: 404.html  @  README.md  ban.js  banned.html  call.html  carrotscript_coder.js  documentation.html  example.js  file.html  file.js  files.js  hey.php  index.html  leafletjsmap.html  loaclhostapi.py  localhost.html  login.html  map.js  module.js  open.js  plugin.js  styles.css  terms.html  terms.js  tryit.htnl
pip/: LICENSE  README.md  carrotscript-0.0.1-py3-none-any.whl  setup.cfg
pip/carrotscript/: carrotscript.py
pip/carrotscript.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
terminal/: carrotscriptterminal.py  download.py  mac.py  mac.sh  terminal.sh
terminal/linux/: carrotscriptterminal.py  terminal.sh
terminal/mac/: download.py  terminal.sh
test/: README.md  clicks.csv  index.html  test.py
tryit/: file.html  index.html  test-it.html  upload.html
tryit/css/: type.css
tryit/js/: change.js  file.js  read.js  redirect.js  save.js  type.js  upload.js
