[metadata]
name = carrotscript
version = 0.0.1
author = Greatly Gravitate
author_email = jakkipally@gmail.com
description = Create a quick local testing server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carrotscript/carrotscript.github.io/tree/main/pip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.7
include_package_data = True